# crypto-n-rust

./: .gitignore  .gitmodules  00-intro.md  01-hello-world.md  02-summer.md  03-modules.md  Cargo.toml  Makefile  README.md  commands.txt  daily-reports.md  quiz-01-qi-yields.md
.github/: apgecko.test.yml
.github/workflows/: coffee.yml  date.yml  env.yml  greetings.yml  quotes.yml  secrets.yml
data-files/: covfefe.txt
data-files/AVAX/: benqi_positions.lsv
data-files/BLUE/: wallet.lsv
data-files/BOW/: lps.lsv
data-files/FIN/: aliases.csv  all-isomorphic-paths-with-synthetics.csv  all-isomorphic-paths.csv  assets.csv  market.lsv  no_synthetics.tsv  order_book_volumes.json  prices.csv  (+5 more)
src/ch05/cmc_prices/: Cargo.toml  README.md  cmc_prices.rs
src/ch06/cmc_filter/: Cargo.toml  cmc_filter.rs
src/ch08/efficacy/: Cargo.toml  efficacy.rs  exposé_efficacy.rs  improved_efficacy.rs
src/ch08/efficacy/data/: ATOM-OSMO.csv  ATOM.csv  DOT.csv  ETH.csv  KUJI.csv  OSMO-ATOM.csv  OSMO.csv  USK.csv  all-isomorphic-paths.csv  axlUSDC-USK.csv  axlUSDC.csv  market.lsv  some-paths.csv
src/ch08/pnl/: Cargo.toml  README.md  parsing.rs  pnl.rs  pnl_with_liquidations.rs  reports.rs  trade_state.rs
src/ch08/pnl/data/: 2022-11-03-assets.csv  2022-11-04-assets.csv  2022-11-04-trades.csv  2022-11-10-trades.csv  assets.csv  trades.csv
src/ch09/burn/: Cargo.toml  burn.rs  buy.rs  entries.rs  lib.rs  libs.rs  parse_json.rs  purchases.rs  read_file.rs  read_rest.rs  reports.rs  rest_read.rs
src/ch09/burn/assemblage/: Cargo.toml  README.md
src/ch09/burn/buy/: buy.rs
src/ch09/burn/data/: LSDs.csv  ampLUNA_USK.json  axlUSDC_USK.json  stATOM_ATOM.json  stINJ_INJ.json  wBTC_USK.json  wBTC_axlUSDC.json
src/ch09/burn/libs/: purchases.rs
src/ch09/burn/sell/: Cargo.toml  sell.rs
src/ch09/lsd/: Cargo.toml  README.md  lib.rs  lsd.rs  lsd_wrong_burn.rs  read_rest.rs  stride.rs  types.rs
src/ch09/lsd/data/: burn-rates.csv  stride.csv
src/ch09/lsd/meth/: lib.rs  read_rest.rs  types.rs
src/ch09/the_planet_mars/: Cargo.toml  the_planet_mars.rs
src/ch09/top_order_books/: Cargo.toml  README.md  analyzed_books.rs  books.rs  lib.rs  linked_books.rs  reports.rs  top_order_books.rs
src/ch09/top_order_books/data/: full.json
src/ch10/orca/: Cargo.toml  liquidations.rs  parsers.rs  reports.rs  types.rs
src/ch10/orca/data/: liquidations.lsv
src/ch10/parsing-kujira-nums/: Cargo.toml  lib.rs  parse_kujira_num.rs  parse_nums.rs
src/ch10/parsing-kujira-nums/data/: liquidations.lsv
src/chapters/ch07/data_entry/: Cargo.toml  README.md  form.rs  lib.rs  rows.rs
src/chapters/ch07/data_entry/benqi/: 2024-03-02.lsv  substance.rs
src/chapters/ch09/burn/: Cargo.toml  README.md  parse_json.rs
src/chapters/ch09/burn/assemblage/: assemblage.rs  files.rs
src/chapters/ch09/burn/buy/: Cargo.toml
src/chapters/ch09/burn/data/: ampLUNA_LUNA.json  stATOM_ATOM.json  stINJ_INJ.json
src/chapters/ch09/burn/libs/: entries.rs  order_books.rs  purchases.rs  reports.rs
src/chapters/ch09/top_traded/: Cargo.toml  reports.rs  top_traded.rs
src/chapters/ch09/wallet/: Cargo.toml  pairs.rs  tokens.rs
src/chapters/ch11/dom/: Cargo.toml  records.rs
src/chapters/ch11/dom/data/: 1_record.json
src/cosmwasm/terra/all_balances/: Cargo.toml  README.md  all_balances.rs  answer.md
src/libs/book/: Cargo.toml  README.md  apy_utils.rs  cli_utils.rs  csv_utils.rs  date_utils.rs  err_utils.rs  file_utils.rs  html_utils.rs  json_utils.rs  lib.rs  list_utils.rs  matrix_utils.rs  num.rs  num_utils.rs  parse_utils.rs  percentage.rs  report_utils.rs  rest_utils.rs  stream_utils.rs  string_utils.rs  table_utils.rs  test_utils.rs  tuple_utils.rs  types.rs  usd.rs  utils.rs
src/libs/book/currency/: crypto.rs  usd.rs
src/libs/book/num/: estimate.rs  floats.rs  percentage.rs  usd.rs
src/libs/book/num/currency/: usd.rs
src/libs/book/num/floats/: comma_floats.rs  safe_floats.rs
src/libs/book/src/: main.rs  moon.rs
src/libs/book/types/: README.md  dyadic.rs  filters.rs  indexed.rs  stamped.rs  tagged.rs  tokens.rs  values.rs
src/libs/book/types/tokens/: moralis.rs
src/libs/book/utils/: apy_utils.rs  csv_utils.rs  date_utils.rs  env_utils.rs  err_utils.rs  file_utils.rs  html_utils.rs  json_utils.rs  list_utils.rs  num_utils.rs  report_utils.rs  rest_utils.rs  stream_utils.rs  string_utils.rs  table_utils.rs  tuple_utils.rs
src/libs/crypto/: Cargo.toml  algos.rs  apy_utils.rs  charts.rs  coins.rs  json_utils.rs  lib.rs  parsers.rs  rest_utils.rs  types.rs
src/libs/crypto/algos/: orders.rs  paths.rs  prices.rs
src/libs/crypto/charts/: venn.rs
src/libs/crypto/parsers/: find_date.rs  kujira_nums.rs  token_prices.rs
src/libs/crypto/types/: aliases.rs  assets.rs  books.rs  coins.rs  interfaces.rs  internal.rs  liquidations.rs  marketplace.rs  pairs.rs  percentage.rs  portfolio.rs  prices.rs  trades.rs  usd.rs  volumes.rs
src/libs/crypto/types/internal/: books.rs  prices.rs  types.rs
src/pivot/dApps/gecko/: Cargo.toml  README.md
src/pivot/dApps/lizard/: BUIDLn.md  Cargo.toml  README.md
src/pivot/dApps/rekt/: Cargo.toml  README.md
src/pivot/dApps/status/: Cargo.toml  README.md
src/pivot/quizzes/quiz02/: Cargo.toml  README.md  answer.md  answer02.rs
src/pivot/quizzes/quiz06/: Cargo.toml  README.md  answer.md  answer06.rs
src/pivot/quizzes/quiz06/data/: sample-response-token-prices.json
src/pivot/quizzes/quiz09/: Cargo.toml  README.md  answer.md  answer09.rs
src/pivot/quizzes/quiz11/: Cargo.toml  README.md  answer.md  answer11.rs  types.rs
src/pivot/quizzes/quiz12/: Cargo.toml  README.md  answer.md  answer12.rs
src/pivot/quizzes/quiz17/: BUILDn.md  Cargo.toml  README.md  answer17a_sections.rs  answer17b_timestamp.rs  answer17c_cleansed.rs  answer17d_display.rs
src/pivot/quizzes/quiz17/data/: eth.json
src/pivot/quizzes/quiz19/: BUIDLn.md  Cargo.toml  README.md  answer19a_simple.rs  answer19b_merged_prices.rs
src/pivot/swerve/: Cargo.toml  fetch_pivots.rs  fetch_prices.rs  fetch_quotes.rs  lib.rs  read_rest.rs  recs.rs  reports.rs  snarf.rs  token_ids.rs  types.rs  verify.rs
(+416 files in other folders)
