[package]
name = "cmc_filter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "cmc_filter"
path = "../cmc_filter.rs"

[dependencies]
book = { path = "../../libs/book" }
crypto = { path = "../../libs/crypto" }
