[package]
name = "burn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "burn"
path = "rest_read.rs"

[dependencies]
book = { path = "../../libs/book" }
crypto = { path = "../../libs/crypto" }

# serde = { version = "1.0.104", features = ["derive"] }
# serde_json = "1.0.48"

reqwest = "0.9.18"
