[package]
name = "lsd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "meth"
path = "lib.rs"

[[bin]]
name = "lsd"
path = "lsd.rs"

[dependencies]
book = { path = "../../libs/book" }
crypto = { path = "../../libs/crypto" }
# rest = { path = "../../libs/rest" }

serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"

reqwest = "0.9.18"
