[package]
name = "the_planet_mars"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "the_planet_mars"
path = "the_planet_mars.rs"

[dependencies]
book = { path = "../../libs/book" }
reqwest = "0.9.18"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
