[package]
name = "top_order_books"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "tob"
path = "lib.rs"

[[bin]]
name = "top_order_books"
path = "top_order_books.rs"

[dependencies]
book = { path = "../../libs/book" }
crypto = { path = "../../libs/crypto" }
