[package]
name = "cillaz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "lib.rs"

[[bin]]
name = "cillaz"
path = "liquidations.rs"

[dependencies]
chrono = "0.4.31"
itertools = "0.8"

book = { path = "../../libs/book" }
crypto = { path = "../../libs/crypto" }
