[package]
name = "book"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "book"
path = "lib.rs"

[dependencies]
chrono = "0.4.38"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
strum = "0.17.1"
strum_macros = "0.17.1"
reqwest = "0.12.4"
