[package]
name = "book"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "book"
path = "lib.rs"

[dependencies]
chrono = "0.4.38"
csv = "1.4.0"
futures = "0.3.31"
ignore = "0.4.25"
paste = "1.0"
reqwest = { version = "0.13.4", features = ["json"] }
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.150"
serde_with = "3.0"
strum = "0.28.0"
strum_macros = "0.28.0"
succ = "0.1.0"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }

# banner stuff: BRUCE Banner, eheh. HULK SMASH!

clap = { version = "4.5", features = ["derive"] }
figlet-rs = "0.1"
colored = "2.1"
colorgrad = "0.4"

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    'cfg(tarpaulin_include)'
]
