[package]
name = "crypto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "crypto"
path = "lib.rs"

[dependencies]
chrono = "0.4.31"
book = { path = "../book" }
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
