[package]
name = "swerve"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "swerve"
path = "lib.rs"

[dependencies]
book = { path = "../../libs/book" }

bimap = "0.6.3"
chrono = "0.4.38"
reqwest = "0.12.4"
async-std = "1.12.0"

serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
