[package]
name = "data_entry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "data_entry"
path = "lib.rs"

[dependencies]
book = { path = "../../libs/book" }
crypto = { path = "../../libs/crypto" }
itertools = "0.9.0"
