[package]
name = "top_traded"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "topper"
path = "lib.rs"

[[bin]]
name = "top_traded"
path = "top_traded.rs"

[dependencies]
book = { path = "../../libs/book" }
crypto = { path = "../../libs/crypto" }

tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
