[package]
name = "all_balances"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
book = { path = "../../../libs/book" }

[[bin]]
name="all_balances"
path="all_balances.rs"
