[package]
name = "lizard"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "lizard"
path = "../../quizzes/quiz19/answer19b_merged_prices.rs"

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5", features = ["derive"] }

book = { path = "../../../libs/book" }
swerve = { path = "../../swerve" }

tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
