[package]
name = "rekt"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rekt"
path = "../../quizzes/quiz14/answer14.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }

book = { path = "../../../libs/book" }
swerve = { path = "../../swerve" }

chrono = "0.4.38"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
