[package]
name = "status"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "status"
path = "../../quizzes/quiz08/answer08.rs"

[dependencies]
book = { path = "../../../libs/book" }
swerve = { path = "../../swerve" }

chrono = "0.4.38"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
