[package]
name = "answer02"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "answer02"
path = "answer02.rs"

[dependencies]
book = { path = "../../../libs/book" }
swerve = { path = "../../swerve" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
