[package]
name = "answer06"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "answer06"
path = "answer06.rs"

[dependencies]
book = { path = "../../../libs/book" }
swerve = { path = "../../swerve" }

serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"

tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
