[package]
name = "answer11"
version = "0.1.0"
edition = "2021"

[lib]
name = "aeson"
path = "lib.rs"

[[bin]]
name = "answer11"
path = "answer11.rs"

[dependencies]
book = { path = "../../../libs/book" }
swerve = { path = "../../swerve" }

chrono = "0.4.38"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
