[package]
name = "answer17"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "answer17"
path = "answer17a_sections.rs"

[dependencies]
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"

book = { path = "../../../libs/book" }
swerve = { path = "../../swerve" }

chrono = "0.4.38"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
