[package]
name = "answer19"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "answer19"
path = "answer19b_merged_prices.rs"

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5", features = ["derive"] }

serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"

book = { path = "../../../libs/book" }
swerve = { path = "../../swerve" }

tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
